@@ -1,3 +1,8 @@
+2006-10-29  Christopher Aillon  <caillon@redhat.com>
+
+	* src/krb5-auth-dialog.c: Clean up the #ifdefs to
+	make things slightly more readable.
+
 2006-07-24  Christopher Aillon  <caillon@redhat.com>
 
 	* configure.ac: Release 0.7
